--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,9 +8,30 @@ body {
   padding: 0;
 }
 
+.cart-widget {
+  position: relative;
+  cursor: pointer;
+}
 .cart-widget i.bi.bi-cart3 {
   font-size: 2rem;
-  cursor: pointer;
+}
+
+.cart-content {
+  position: absolute;
+  top: 0px;
+  right: 5px;
+  height: 1.2rem;
+  width: 1.2rem;
+  border-radius: 10px;
+  background: #f3ab26;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 800;
+  /* padding: 8px; */
+  border: 1px solid #c58000;
+  line-height: 0;
+  color: #302209;
 }
 
 @media screen and (min-width: 1023px) {
@@ -706,6 +727,129 @@ a {
 
 .buying-confirmation + div {
   filter: brightness(0.5) blur(1px);
+}
+
+.cart-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 3rem;
+}
+
+.empty-msg {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.shopping-btn {
+  background: black;
+  color: white;
+  padding: 0.8rem;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+thead {
+  text-transform: uppercase;
+}
+
+table, th, td {
+  /* border-collapse: collapse; */
+  /* padding: 1rem; */
+  text-align: center;
+  background: #6b6d8f;
+  padding: 7px;
+  border-radius: 5px;
+  color: #171820;
+}
+
+th, td {
+  padding: 1rem;
+}
+
+table img {
+  width: 5rem;
+}
+
+.productTd {
+  max-width: 16rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  border: none;
+  background: #eeeef3;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+.remove-item {
+  cursor: pointer;
+  border-radius: 50%;
+  width: 1.1rem;
+  height: 1.1rem;
+  border: 1px solid #910505;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #c31414;
+  color: white;
+  margin: 0 auto;
+}
+
+td {
+  font-size: 1.2rem;
+  font-weight: 500;
+  background: #9091a9;
+  box-shadow: 1px 1px 1px 1px #323346;
+}
+
+tr {
+  border: 1px solid #4b4d5d;
+}
+
+.empty-cart-btn {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #910606;
+  padding: 6px;
+  background: #c31414;
+  /* text-transform: uppercase; */
+  /* font-size: 0.6rem; */
+  grid-gap: 0.5rem;
+  gap: 0.5rem;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  color: white;
+  border-radius: 5px;
+}
+
+table {
+  border-spacing: 0.4rem;
+}
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+@media screen and (max-width: 500px) {
+  .cart-container {
+    overflow: scroll;
+    padding: 0;
+    padding: 3rem 0;
+    align-items: flex-start;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
