--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,3 @@
-
 @use './general';
 @use './navBar';
 @use './greeting';
@@ -9,3 +8,4 @@
 @use './categoryCards';
 @use './error404';
 @use './buyingConfirmation';
+@use './cart';
