--- a/src/assets/scss/_detail.scss
+++ b/src/assets/scss/_detail.scss
@@ -59,6 +59,9 @@ img {
 .detail-description {
     font-size: 1.2rem;
 }
+.nostock{
+    text-align: center;
+}
 
 @media screen and (min-width: 800px) {
 
