--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -108,6 +108,13 @@ table {
     gap: 2rem;
 }
 
+.logOrders{
+    background: none;
+    border: 1px solid black;
+    padding: 0.3rem;
+    border-radius: 5px;
+}
+
 @media screen and(max-width:500px){
     .cart-container{
         overflow: scroll;
