--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -113,6 +113,9 @@ table {
     border: 1px solid black;
     padding: 0.3rem;
     border-radius: 5px;
+    position: absolute;
+    bottom: 1rem;
+    left: 45%;
 }
 
 @media screen and(max-width:500px){
