--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -6,8 +6,35 @@ label {
 }
 form {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1rem;
+
+    
+}
+.form {
+    background: #9091a9;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 1.5rem;
+    color: #171820;
+    align-items: center;
+}
+input {
+    padding: 5px;
+    font-size: 1.1rem;
+    border-radius: 4px;
+    width: min-content;
+    width: inherit;
+}
+
+.inputRow {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: center;
 }
